# hyper-oculus

./: Cargo.toml  LICENSE.md  README.md  compile-shaders.bat  compile-shaders.sh
data/shaders/: vert.spv
src/: app.rs  config.rs  fps_calculator.rs  helpers.rs  main.rs
src/buffers/: buffer.rs  mod.rs
src/cameras/: camera3.rs  camera4.rs  camera_proj3.rs  camera_proj4.rs  math.rs  mod.rs
src/core/: math.rs
src/entities/: cube.rs  entity.rs  hypercube.rs  mod.rs  simplex.rs  triangle.rs
src/pipelines/: mod.rs  pipeline.rs
src/shaders/: compile.sh  shader.vert
src/utils/: mod.rs
