[package]
name = "ash-simplex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ash = "0.37.0"
ash = { version="0.37", default-features = false, features = ["linked", "debug"] }
ash-window = "0.11.0"
async-std = "1.12.0"
egui = "0.16.1"
# egui-winit-ash-integration = "0.2.0"

egui-winit-ash-integration = { path = "../egui-winit-ash-integration" }
# gpu-allocator = { version = "0.16.0", optional = true }
gpu-allocator = "0.19.0"
memoffset = "0.6.5"
nalgebra = "0.30.1"
once_cell = "1.9.0"
winit = "0.26.1"

[features]
# gpu-allocator-feature = [ "gpu-allocator" ]